# ml-lab

./: CMakeLists.txt  README.md
src/: main.cpp  matrix.cpp  matrix.h  matrix_cuda.cu  mnist.cpp  mnist.h  neural_network.cpp  neural_network.h  types.h
